--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,4 @@
-- Create bash script for init db
+- make sure only I can call api
+
+Ideas:
+- http://www.manythings.org/vocabulary/lists/l/words.php?f=ogden-qualities
