update difficulty ranges

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,13 @@
 Definitions:
 Words to tweak:
-  - sociable
-  - weather - "To face and withstand with courage/to bear up against and come safely through"
-  - time
 - Add more easy definitions
 - Tweak/check more definitions
 
 Rhymes:
-- Recheck ranges to check difficulty ranges again
 - Remove score and numSyllables fields
+- Update endpoint to get all difficulties
 
+- Handle UK and US Spelling?
 - make prod environment, setup on app different env variables for prod/dev
   - when adding prod, will need to add thing for react native config to android (see github page)
 - look into AWS - https://aws.amazon.com/getting-started/projects/deploy-nodejs-web-app/
