--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,18 @@
 Definitions:
 Words to tweak:
+- Fix Chimera definitions, remove Manichean
 - Add more easy definitions
 - Tweak/check more definitions
 
 Rhymes:
-- Remove score and numSyllables fields
-- Update endpoint to get all difficulties
+- Remove common
 
 - Handle UK and US Spelling?
 - make prod environment, setup on app different env variables for prod/dev
   - when adding prod, will need to add thing for react native config to android (see github page)
 - look into AWS - https://aws.amazon.com/getting-started/projects/deploy-nodejs-web-app/
 - decide on DB hosting - mongo cloud or digital ocean or ??, dokku?, netlify?
+  (could use now as dev env?)
 
 - load test api
 
