script and word changes

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,8 +7,14 @@ Words to tweak:
 
 Add limiting ranges to elo post route
 
+- Backup, create backup system? (will depend on hosting choice)
+
 Rhymes:
-- Remove common
+- find correct english language words file
+- re-filter
+- then re check the ranges/master difficulties/elos
+- backup
+- Remove common, father ?
 
 - Handle UK and US Spelling?
 - make prod environment, setup on app different env variables for prod/dev
