--- a/TODO.txt
+++ b/TODO.txt
@@ -13,11 +13,16 @@ After Release:
 Definitions:
 - Add more easy definitions
 - Tweak/check more definitions
-  - kindle definition
+  - kindle, weather (make easier) definition
+  - luminous, pejorative, umbrage, sanguine, dispel, amenable, protean, fatuous, fractious, modicum, serendipity, alacrity, profligate, pithy - delete one
+
+  - pariah, adroit - replace with new definitions
+  - precious - add eloRating and difficulty
 
 Rhymes:
 - Handle UK and US Spelling? - check which is used in my dataset, for words and Rhymes
   - stick with one or accept both?
+- add Bot to Hot
 
 
 Ideas:
