add elo migration script

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,20 +4,31 @@
   - script to restore from backup?
 
 - how to monitor server response times/load? how to load test?
+- upgrade server before release?
+- restrict max elo change on set-elo routes (to 32?)
 
-After Release:
-- look into improving ddos protection
-  - https://www.digitalocean.com/community/questions/does-digitalocean-have-an-anti-ddos-protection
+Update ELO mid ranges:
+[NOVICE]: { lower: 600, upper: 1000 }, 800
+[JOURNEYMAN]: { lower: 1000, upper: 1600 }, 1300
+[EXPERT]: { lower: 1600, upper: 2200 }, 1900
+[MASTER]: { lower: 2200, upper: 3600 }, 2900
 
 Definitions:
-- 
-- Remove/Redo - Road, Profligacy, Enfranchise
+- Add more journeyman, expert and master words
+- Remove/Tweak - Road, Profligacy, Enfranchise, Bell, Gold, Sugar, Mouth, Delerious, Pithy, Kind, Lamp, Chair, Zero
+- Change difficulty - Comfortable, Government, Feral, Comfortable, Condition, Serenity, Proper
+- Filter out really long definitions
 
 Rhymes:
 - Handle UK and US Spelling? - check which is used in my dataset, for words and Rhymes
   - stick with one or accept both?
 - add Bot to Hot
+- add Been to Queen
 
+
+After Release:
+- look into improving ddos protection
+  - https://www.digitalocean.com/community/questions/does-digitalocean-have-an-anti-ddos-protection
 
 Ideas:
 - http://www.manythings.org/vocabulary/lists/l/words.php?f=ogden-qualities
