--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,8 @@
 Definitions:
 - Add more journeyman, expert and master words
 - Find out really long definitions and shorten them
-- Remove/Tweak - 
-- Change difficulty - 
+- Remove/Tweak - jelly
+- Change difficulty - emerge
 
 Rhymes:
 - Handle UK and US Spelling? - check which is used in my dataset, for words and Rhymes
