add dotenv for cronjob

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 For Push Notifications:
+- update ecosystem file on master on server
 - Add environment variables to server APPLE_PUSH_KEY_ID, APPLE_TEAM_ID, NODE_ENV
 - Add AuthKey to server
 - Make the cron jobs run once every nine days (one every three days in total)
